force-app/main/default/objects/Titre__c/Titre__c.object-meta.xml
<CustomObject>
    <label>Titre</label>
    <nameField>
        <label>Nom de Titre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Titre</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>