force-app/main/default/objects/Titre__c/fields/Code_titre__c.field-meta.xml
<CustomField>
    <fullName>Code_titre__c</fullName>
    <externalId>true</externalId>
    <label>Code titre</label>
    <length>10</length>
    <type>Text</type>
</CustomField>