force-app/main/default/objects/Titre__c/fields/Fili_re__c.field-meta.xml
<CustomField>
    <fullName>Fili_re__c</fullName>
    <label>Filière</label>
    <length>10</length>
    <type>Text</type>
</CustomField>