force-app/main/default/objects/Titre__c/fields/Regt_titre__c.field-meta.xml
<CustomField>
    <fullName>Regt_titre__c</fullName>
    <label>Regt titre</label>
    <length>40</length>
    <type>Text</type>
</CustomField>